# tui-wave

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  IMMEDIATE-PLAN.md  LICENSE  MANUAL_TESTING.md  README.md  THIRD_PARTY_NOTICES.md  TODO.md  USERGUIDE.md  UX-OVERHAUL.md
cdp/: abfdcode  abfpan  abfpan2  analjoin  asciiget  blur  bounce  brkdur  brktopi  brownian  caltrain  cantor  cascade  cdparams  cdparams_other  cdparse  ceracu  channelx  chanphase  chirikov  chorder  chxformat  clicknew  clip  columns  combine  constrict  convert_to_midi  copysfx  crumble  crystal  cubicspline  dirsf  diskspace  distcut  distmark  distmore  distort  distortt  distrep  (+180 more)
docs/: cdp-custom-process-example.toml
packaging/: build-appimage.sh  build-deb.sh  build-pkg.sh  tui-wave.desktop
scripts/: convert_soundthread_catalog.py
src/: config.rs  main.rs
src/audio/: engine.rs  source.rs
src/cdp/: mod.rs  runner.rs
src/commands/: cdp.rs  cut.rs  delete.rs  fade.rs  gain.rs  marker.rs  mod.rs  normalize.rs  paste.rs  resample.rs  reverse.rs  trim.rs
src/model/: bwf.rs  clipboard.rs  command.rs  curve.rs  curve_history.rs  document.rs  dsp.rs  formant.rs  history.rs  io.rs  mod.rs  selection.rs
src/model/cdp/: catalog.rs  catalog.toml  catalog_extra.toml  catalog_titles.toml  chain.rs  chain_last.rs  chain_preset.rs  chain_recent.rs  def.rs  envelope_preset.rs  mod.rs  pipeline.rs  preset.rs  process_last.rs  recent.rs
src/ui/: app.rs  buffer_panel.rs  file_panel.rs  keymap.rs  layout.rs  menu.rs  mod.rs  terminal.rs  text_input.rs  theme.rs  toolbar.rs  viewport.rs  waveform_cache.rs
src/ui/widgets/: braille.rs  cdp_envelope_image.rs  db_scale.rs  formant_image.rs  mod.rs  statusbar.rs  waveform.rs  waveform_image.rs
